crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_attribute.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a name after `@`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write the attribute name directly after `@`.
