crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_arg.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: f )
---
nash::syntax

  × Expected an argument pattern.
   ╭─[src/Main.nash:1:3]
 1 │ f )
   ·   ─
   ╰────
  help: Use a variable, constructor pattern, or `_`.
