crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_body.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was partway through parsing the `f` definition, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see an expression like 42 or "hello". Once there is something
        there, I can probably give a more specific hint! This can also happen if I run
        into reserved words like `let` or `as` unexpectedly, or operators in unexpected
        spots.
