crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_indent_body.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected an expression after `=`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add an indented body, or `todo` for unfinished code.
