crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_indent_type.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED DEFINITION

  × I got stuck while parsing the `f` type annotation:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I just saw a colon, so I am expecting to see a type next.

        Here is a valid definition (with a type annotation) for reference:

            greet : string -> string
            greet name =
              "Hello " ++ name ++ "!"

        The top line (called a "type annotation") is optional. You can leave it off if
        you want. As you get more comfortable with Nash and as your project grows, it
        becomes more and more valuable to add them though! They work great as
        compiler-verified documentation, and they often improve error messages!
