crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_name_match.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : int\ng = 1"
---
nash::syntax

  × Expected definition `f`, found `g`.
   ╭─[src/Main.nash:2:1]
 1 │ f : int
 2 │ g = 1
   · ─
   ╰────
  help: Use the same name for the annotation and definition.
