crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_name_repeat.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected the definition of `f` after its annotation.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Repeat the annotated name and add its arguments and body.
