crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_def_type.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : 42"
---
nash::syntax

  × Expected a type in the annotation for `f`.
   ╭─[src/Main.nash:1:5]
 1 │ f : 42
   ·     ─
   ╰────
  help: Write a type name or a quoted type variable, such as `'a`.
