crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_fresh_line_after_doc_comment.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I just saw a doc comment, but then I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see the corresponding declaration next, starting on a fresh
        line with no indentation.
