crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_impl.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a trait name and type arguments.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `impl Trait Type where`.
